--- a/Front-end/src/views/Users/Users.scss
+++ b/Front-end/src/views/Users/Users.scss
@@ -21,6 +21,7 @@
                 border-collapse: collapse;
                 width: 100%;
                 background-color: rgb(245, 234, 234);
+                font-size: 15px;
               }
               
               td, th {
